@@ -1,3 +1,13 @@
+2009-09-20 Philipp Klaus Krause <pkk AT spth.de>
+	* sdcc/debugger/mcs51/sdcdb.c,
+	  sdcc/src/SDCCerr.c,
+	  sdcc/src/z80/gen.c,
+	  sdcc/src/z80/mappings.i,
+	  sdcc/src/pic16/gen.c,
+	  sdcc/src/pic16/pcode.c,
+	  sdcc/support/librarian/sdcclib.c:
+	  Applied spelling patch #2862563.
+
 2009-09-15 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* device/include/mcs51/at89Sx051.h: new, added, applied patch 2858106,
